Modification avec jQuery

--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Réservation de vélos</title>
-   
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
     <h1>Gestion de vélos à Paris</h1>
     <div id="diaporama"></div>
+    <div id="pause">Arrêt du défilement</div>
+
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus nemo libero possimus exercitationem,
         voluptatum optio veniam. Pariatur, autem dolores dolorum sequi qui reiciendis reprehenderit ut saepe unde,
         veritatis facilis aspernatur!</p>
+    
     <script src="js/scripts.js"></script>
 </body>
 </html>
