1ère version fonctionnelle du diaporama

--- a/index.html
+++ b/index.html
@@ -20,13 +20,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
-    <h1>Gestion de vélos à Paris</h1>
+    <h1>Gestion de vélos à Lyon</h1>
     <div id="diaporama"></div>
-    <div id="pause">Arrêt du défilement</div>
-
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus nemo libero possimus exercitationem,
-        voluptatum optio veniam. Pariatur, autem dolores dolorum sequi qui reiciendis reprehenderit ut saepe unde,
-        veritatis facilis aspernatur!</p>
+    <div id="pause">Arrêt du défilement : contrôle manuel avec les touches ou la souris</div>
     
     <script src="js/scripts.js"></script>
 </body>
