--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
 </head>
 <body>
     <h1>Gestion de vélos à Lyon</h1>
-    <div id="diaporama"></div>
+    <div id="diaporama">
+        <img src="" alt="" id="diapo">
+    </div>
     <div id="pause">Arrêt du défilement : contrôle manuel avec les touches ou la souris</div>
     
-    <script src="js/scripts.js"></script>
+    <script src="js/classes.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
