--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="robots" content="noindex,nofollow">
     <link rel="stylesheet" href="css/mobile.css">
  <!--   <link rel="stylesheet" media="screen and (min-width: 481px)" href="css/pad.css">
-    <link rel="stylesheet" media="screen and (min-width: 1025px)" href="css/desktop.css">
+    <link rel="stylesheet" media="screen and (min-width: 1025px)" href="css/desktop.css">-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <script defer src="https://use.fontawesome.com/releases/v5.7.0/js/all.js"
         integrity="sha384-qD/MNBVMm3hVYCbRTSOW130+CWeRIKbpot9/gR1BHkd7sIct4QKhT1hOPd+2hO8K" crossorigin="anonymous">
     </script>
--->
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Réservation de vélos</title>
@@ -21,8 +21,18 @@
 </head>
 <body>
     <h1>Gestion de vélos à Lyon</h1>
-    <div>
+    <div id="slider">
         <img src="" alt="" id="diapo">
+        <!-- Flèche de déplacement gauche -->
+        <span id="left-arrow" class="fa-layers">
+            <i class="fas fa-circle icones-dark" data-fa-transform="grow-6 left-8"></i>
+            <i class="fas fa-chevron-left" data-fa-transform="shrink-8 left-3"></i>
+        </span>
+        <!-- Flèche de déplacement droite -->
+        <span id="right-arrow" class="fa-layers">
+            <i class="fas fa-circle icones-dark" data-fa-transform="grow-6 right-8"></i>
+            <i class="fas fa-chevron-right" data-fa-transform="shrink-8 right-3"></i>
+        </span>
     </div>
     
     <script src="js/classes.js"></script>
