--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <body>
     <h1>Gestion de vélos à Lyon</h1>
     <div id="slider">
+        <!-- Image Principale -->
         <img src="" alt="" id="diapo">
         <!-- Flèche de déplacement gauche -->
         <span id="left-arrow" class="fa-layers">
