--- a/index.html
+++ b/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Cyril Gallitre">
     <meta name="description" content="Réservation de vélos urbains">
     <meta name="robots" content="noindex,nofollow">
     <link rel="stylesheet" href="css/mobile.css">
- <!--   <link rel="stylesheet" media="screen and (min-width: 481px)" href="css/pad.css">
+    <!--   <link rel="stylesheet" media="screen and (min-width: 481px)" href="css/pad.css">
     <link rel="stylesheet" media="screen and (min-width: 1025px)" href="css/desktop.css">-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <script defer src="https://use.fontawesome.com/releases/v5.7.0/js/all.js"
         integrity="sha384-qD/MNBVMm3hVYCbRTSOW130+CWeRIKbpot9/gR1BHkd7sIct4QKhT1hOPd+2hO8K" crossorigin="anonymous">
     </script>
-
+    <!-- map gérée par leaflet -->
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css">
+    <!-- Leaflet -->
+<script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Réservation de vélos</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
+
 <body>
-    <h1>Gestion de vélos à Lyon</h1>
+    <h1>Gestion de vélos à Nantes</h1>
+    <!-- Bandeau supérieur -->
     <div id="slider">
         <!-- Image Principale -->
         <img src="" alt="" id="diapo">
@@ -35,8 +41,15 @@
             <i class="fas fa-chevron-right" data-fa-transform="shrink-8 right-3"></i>
         </span>
     </div>
-    
+
+    <!-- Gestion de la carte -->
+    <div id="mapid"></div>
+
+
+    <!-- Chargement des différents scripts -->
     <script src="js/classes.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/map.js"></script>
 </body>
+
 </html>
