création de la classe Map

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
 
     <!-- Chargement des différents scripts -->
-    <script src="js/classes.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/diaporama.js"></script>
     <script src="js/map.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
