Ajout des stations + marqueurs

--- a/index.html
+++ b/index.html
@@ -44,9 +44,12 @@
 
     <!-- Gestion de la carte -->
     <div id="mapid"></div>
+    <h2>Liste des stations</h2>
+    <ul id="listeStations"></ul>
 
 
     <!-- Chargement des différents scripts -->
+    <script src="js/ajax.js"></script>
     <script src="js/diaporama.js"></script>
     <script src="js/map.js"></script>
     <script src="js/main.js"></script>
