--- a/index.html
+++ b/index.html
@@ -65,13 +65,17 @@
             </div>
         </div>  
     </div>
-    <!-- Message de confirmation de la réservation -->
-    <div id="confirmation"></div>
+    <!-- Message de confirmation de la réservation et bouton d'annulation -->
+    <div id="confirmation">
+        <p id="messageConfirmation"></p>
+        <button id="annuler">Annuler</button>
+    </div>
     <!-- Chargement des différents scripts -->
     <script src="js/ajax.js"></script>
     <script src="js/diaporama.js"></script>
     <script src="js/map.js"></script>
     <script src="js/canvas.js"></script>
+    <script src="js/timer.js"></script>
     <script src="js/main.js"></script>
 </body>
 
