Enchainement résa et CSS

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!-- Encart de réservation-->
         <div id="resa">
             <h2>Réservation</h2>
-            <p id="detailsStation"></p>
+            <p id="detailsStation">Veuillez sélectionner une station dans la carte.</p>
             <form id="formResa">
                 <p>
                     Entrez vos nom/prénom pour réserver :<br><br>
@@ -67,7 +67,7 @@
     </div>
     <!-- Message de confirmation de la réservation et bouton d'annulation -->
     <div id="confirmation">
-        <p id="messageConfirmation"></p>
+        <p id="messageConfirmation">Aucune réservation en cours.</p>
         <button id="annuler">Annuler</button>
     </div>
     <!-- Chargement des différents scripts -->
