--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <!-- Chargement des différents scripts -->
     <script src="js/ajax.js"></script>
     <script src="js/diaporama.js"></script>
+    <script src="js/stockage.js"></script>
     <script src="js/map.js"></script>
     <script src="js/canvas.js"></script>
     <script src="js/timer.js"></script>
