refactoring fait : manque canvas

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <script src="js/ajax.js"></script>
     <script src="js/diaporama.js"></script>
     <script src="js/stockage.js"></script>
+    <script src="js/details.js"></script>
     <script src="js/map.js"></script>
     <script src="js/canvas.js"></script>
     <script src="js/timer.js"></script>
