--- a/index.html
+++ b/index.html
@@ -6,20 +6,23 @@
     <meta name="author" content="Cyril Gallitre">
     <meta name="description" content="Réservation de vélos urbains">
     <meta name="robots" content="noindex,nofollow">
-    <link rel="stylesheet" href="css/mobile.css">
-    <!--   <link rel="stylesheet" media="screen and (min-width: 481px)" href="css/pad.css">
-    <link rel="stylesheet" media="screen and (min-width: 1025px)" href="css/desktop.css">-->
+    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <script defer src="https://use.fontawesome.com/releases/v5.7.0/js/all.js"
         integrity="sha384-qD/MNBVMm3hVYCbRTSOW130+CWeRIKbpot9/gR1BHkd7sIct4QKhT1hOPd+2hO8K" crossorigin="anonymous">
     </script>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- map gérée par leaflet -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css">
     <!-- Leaflet -->
     <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Réservation de vélos</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
@@ -54,26 +57,26 @@
                     Entrez vos nom/prénom pour réserver :<br><br>
                     <input type="text" name="prenom" id="prenom" placeholder="Prénom" required><br>
                     <input type="text" name="nom" id="nom" placeholder="Nom" required><br><br>
-                    <input type="submit" value="Réserver !" id="reserver">
+                    <input type="submit" value="Réserver !" id="reserver" class="btn btn-primary">
                 </p>
             </form>
             <div id="sign">
                 <p>Merci de signer ci-dessous :</p>
                 <canvas id="signature" width="250" height="125"></canvas>
-                <button id="ok">Valider</button>
-                <button id="clear">Effacer</button>
+                <button id="ok" class="btn">Valider</button>
+                <button id="clear" class="btn">Effacer</button>
             </div>
-        </div>  
+        </div>
     </div>
     <!-- Message de confirmation de la réservation et bouton d'annulation -->
     <div id="confirmation">
         <p id="messageConfirmation">Aucune réservation en cours.</p>
-        <button id="annuler">Annuler</button>
+        <button id="annuler" class="btn">Annuler</button>
     </div>
     <!-- Chargement des différents scripts -->
     <script src="js/ajax.js"></script>
     <script src="js/diaporama.js"></script>
-    <script src="js/stockage.js"></script>
+    <script src="js/reservation.js"></script>
     <script src="js/details.js"></script>
     <script src="js/map.js"></script>
     <script src="js/canvas.js"></script>
