Améliorations CSS (map + resa sans bootstrap)

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </span>
         </figure>
 
-        <div id="main" class="">
+        <div id="main">
             <!-- Gestion de la carte -->
             <div id="mapid"></div>
             <!-- Encart de réservation-->
@@ -65,7 +65,7 @@
                 </form>
                 <div id="sign">
                     <p>Merci de signer ci-dessous :</p>
-                    <canvas id="signature" width="250" height="125"></canvas>
+                    <canvas id="signature"></canvas>
                     <button id="ok" class="btn btn-primary">Valider</button>
                     <button id="clear" class="btn btn-primary">Effacer</button>
                 </div>
