Première version finalisée

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </form>
                 <div id="sign">
                     <p>Merci de signer ci-dessous :</p>
-                    <canvas id="signature"></canvas>
+                    <canvas id="signature" width="220" height="130"></canvas>
                     <button id="ok" class="button">Valider</button>
                     <button id="clear" class="button">Effacer</button>
                 </div>
