début modif finalisation

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css">
     <!-- Leaflet -->
     <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
-
-    <title>Réservation de vélos</title>
+    <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <title>Réservation de vélos</title>
 </head>
 
 <body>
@@ -45,6 +45,7 @@
             </span>
         </figure>
 
+        <!-- Partie centrale -->
         <div id="main">
             <!-- Gestion de la carte -->
             <div id="mapid"></div>
@@ -83,10 +84,6 @@
     <script src="js/canvas.js"></script>
     <script src="js/timer.js"></script>
     <script src="js/main.js"></script>
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-    </script>
 </body>
 
 </html>
