--- a/index.html
+++ b/index.html
@@ -54,13 +54,10 @@
                 <h2>Réservation</h2>
                 <p id="detailsStation">Veuillez sélectionner une station dans la carte.</p>
                 <form id="formResa">
-                    <p>
-                        Entrez vos nom/prénom pour réserver :<br><br>
-                        <input type="text" name="prenom" id="prenom" placeholder="Prénom"><br>
-                        <input type="text" name="nom" id="nom" placeholder="Nom"><br><br>
-                        <input type="submit" value="Réserver !" id="reserver" class="button">
-                        
-                    </p>
+                    <label>Entrez vos nom/prénom pour réserver :</label><br><br>
+                    <input type="text" name="prenom" id="prenom" placeholder="Prénom"><br>
+                    <input type="text" name="nom" id="nom" placeholder="Nom"><br><br>
+                    <input type="submit" value="Réserver !" id="reserver" class="button">
                 </form>
                 <div id="sign">
                     <p>Merci de signer ci-dessous :</p>
